--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\anuj\\envs\\test\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\anuj\\envs\\test\\Scripts\\python.exe",
+    "liveServer.settings.port": 5501
 }
